# pgburst

./: .gitignore  CHANGELOG.md  Cargo.toml  Cargo_template.toml  README.md  build.sh  build1.sh  build2_release.sh  build3_after_release.sh  build4_debian.sh  collection_privileges.md  ct.sql  debian_control.~1~  manpage.md  manpage_template.md  private_todo.md
AnglistikAP2/bewerber_api/functions/: get_question.sql  get_random_password.sql  handle_answer.sql  login.sql  read_bewerber.sql
AnglistikAP2/bewerber_api/views/: vw_prepare_emails.sql
AnglistikAP2/public/functions/: add_frage.sql  algorithm_sign.sql  armor.sql  auswertung_start.sql  calc_admissions.sql  digest.sql  export_results.sql  gen_salt.sql  get_bewerber_stats.sql  get_fragen_stats.sql  get_test_results.sql  mini_stats.sql  pgp_pub_decrypt.sql  pgp_pub_decrypt_bytea.sql  pgp_sym_decrypt_bytea.sql  pgp_sym_encrypt.sql  pgp_sym_encrypt_bytea.sql  sign.sql  test_archivieren.sql  trigger_aufnahmetest_upsert.sql  url_decode.sql  url_encode.sql  verify.sql  vorabtest_archivieren.sql
AnglistikAP2/public/triggers/: trigger_aufnahmetest_aktiv_limit.sql
AnglistikAP2/public/views/: fragen_und_kontexte.sql  t_k_k.sql  t_k_k_a_f_ap.sql
src/: main.rs
src/conf/: mod.rs
src/pg/: dump_analyzer.rs  mod.rs
src/watch/: change_log.rs  mod.rs
testkommentare/pg_burst_skript/: 1_t_test.sql  1_t_test_UNDO.sql  1_t_test_id_seq.sql  2_t_test_id_seq.sql  3_t_test_id_seq.sql  4_t_test_id_seq.sql  4_t_test_id_seq_UNDO.sql  apply_changes.sh  apply_changes_UNDO.sh
testkommentare/types/: .sql
(+6 files in other folders)
